--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 		"@types/node": "^18.19.130",
 		"@typescript-eslint/eslint-plugin": "^8.52.0",
 		"@typescript-eslint/parser": "^8.52.0",
-		"builtin-modules": "3.3.0",
+		"builtin-modules": "^5.0.0",
 		"esbuild": "^0.25.12",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
+		"tslib": "^2.8.1",
 		"typescript": "^5.9.3"
 	}
 }
