--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/parser": "^8.52.0",
 		"builtin-modules": "^5.0.0",
 		"esbuild": "^0.27.2",
+		"eslint-plugin-obsidianmd": "^0.1.9",
 		"obsidian": "latest",
 		"tslib": "^2.8.1",
 		"typescript": "^5.9.3"
